--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Document_2</title>
   </head>
   <body>
     <div class="jumbotron" style="background-color: #dff0d8;">
